Spacing issue

--- a/css/browser.css
+++ b/css/browser.css
@@ -14,7 +14,7 @@ img{
     opacity: 0.8;
     position: absolute;
     top: -10px;
-    left: 15px;
+    left: 10px;
     z-index: 1;
 }
 .refresh {
